#0 vdt-build-0.0.6-1 Made --mock-config AUTO default; made it generate a different config for mock 0.6 vs 0.8+ Added 'release' target to Makefile.
git-svn-id: https://vdt.cs.wisc.edu/svn/software/vdt-build/trunk@12234 4e558342-562e-0410-864c-e07659590f8c

--- a/sample-vdt-build.ini
+++ b/sample-vdt-build.ini
@@ -10,13 +10,19 @@
 ;yum_base=/p/vdt/public/html/repos/3.0/el5/development/
 
 ; The mock config to use by default
+; The special value AUTO generates a mock config
 ;mock_config=centos-5-x86_64
 
 ; The prefix for the software cache that holds upstream tarballs
 ; Special values are:
 ; VDT: http://vdt.cs.wisc.edu/upstream
 ; AFS: file:///p/vdt/public/html/upstream
+; The default is to use AFS if available, VDT if not.
 ;cache_prefix=VDT
+
+; The submit machine in the NMI Build and Test Lab to submit batlab jobs to
+;nmi_submit_machine = nmi-s003.cs.wisc.edu
+;nmi_submit_machine = submit-01.batlab.org
 
 ; Who to send email notifications about job success/failure for batlab
 ; tasks.
