--- a/sample-vdt-build.ini
+++ b/sample-vdt-build.ini
@@ -7,22 +7,22 @@
 ; The base of the yum directories to push finished packages to
 ; Uncomment to push packages here if a mock or batlab task is used or
 ; --push-to-yum is passed.
-;yum_base=/p/vdt/public/html/repos/3.0/el5/development/
+yum_base=/p/vdt/public/html/repos/3.0/el5/development/
 
 ; The mock config to use by default
 ; The special value AUTO generates a mock config
-;mock_config=centos-5-x86_64
+mock_config=AUTO
 
 ; The prefix for the software cache that holds upstream tarballs
 ; Special values are:
 ; VDT: http://vdt.cs.wisc.edu/upstream
 ; AFS: file:///p/vdt/public/html/upstream
-; The default is to use AFS if available, VDT if not.
-;cache_prefix=VDT
+; AUTO: Use AFS if available, VDT if not.
+cache_prefix=AUTO
 
 ; The submit machine in the NMI Build and Test Lab to submit batlab jobs to
 ;nmi_submit_machine = nmi-s003.cs.wisc.edu
-;nmi_submit_machine = submit-01.batlab.org
+nmi_submit_machine = submit-01.batlab.org
 
 ; Who to send email notifications about job success/failure for batlab
 ; tasks.
