vdt-built-0.0.13 containing configurable dist tag
git-svn-id: https://vdt.cs.wisc.edu/svn/software/vdt-build/trunk@12389 4e558342-562e-0410-864c-e07659590f8c

--- a/sample-vdt-build.ini
+++ b/sample-vdt-build.ini
@@ -27,3 +27,7 @@ nmi_submit_machine = submit-01.batlab.org
 ; Who to send email notifications about job success/failure for batlab
 ; tasks.
 ;email=
+
+; The distribution tag to append to the end of the release number
+distro_tag=osg
+
