vdt-build-0.15 get_mock_version() bug fixes Added koji task Removed call to koji tag/import in batlab task.
git-svn-id: https://vdt.cs.wisc.edu/svn/software/vdt-build/trunk@12591 4e558342-562e-0410-864c-e07659590f8c

--- a/sample-vdt-build.ini
+++ b/sample-vdt-build.ini
@@ -31,3 +31,6 @@ nmi_submit_machine = submit-1.batlab.org
 ; The distribution tag to append to the end of the release number
 distro_tag=osg
 
+; The login (your CN) to use for koji
+;kojilogin=Your Name 123456
+
