osg-build 0.0.18 - vdt-build renamed to osg-build. (SOFTWARE-53) - Moved supporting python files to their own subdirectory. (SOFTWARE-129) - vdtkoji.conf moved to /usr/share/osg-build instead of being mixed in with the .py files (and renamed to osg-koji.conf). (SOFTWARE-129) - Added osg-minefield repository to the mock config. (SOFTWARE-139) - Fixed logging (-v/-q weren't being obeyed).
git-svn-id: file:///p/vdt/workspace/svn/software/osg-build/trunk@12662 4e558342-562e-0410-864c-e07659590f8c

--- a/sample-osg-build.ini
+++ b/sample-osg-build.ini
@@ -1,4 +1,4 @@
-; Copy this to ~/.vdt-build.ini
+; Copy this to ~/.osg-build.ini
 [options]
 ; Uncomment the following to use a temporary directory in /tmp to hold
 ; temp files made during the build
