osg-build 0.0.20: Added --koji-tag and --koji-target command-line options.
git-svn-id: file:///p/vdt/workspace/svn/software/osg-build/trunk@12769 4e558342-562e-0410-864c-e07659590f8c

--- a/sample-osg-build.ini
+++ b/sample-osg-build.ini
@@ -31,6 +31,13 @@ nmi_submit_machine = submit-1.batlab.org
 ; The distribution tag to append to the end of the release number
 distro_tag=osg
 
-; The login (your CN) to use for koji
+; The login (your CN) to use for koji. Usually not needed--osg-build will read
+; it from your ~/.koji/client.crt
 ;kojilogin=Your Name 123456
+
+; The koji target to pass to 'koji build'
+koji_target=el5-osg
+
+; The koji tag to add packages under
+koji_tag=el5-osg
 
