osg-build 1.1.3 - Changed koji task to build for both el5 and el6 by default - Added --koji-tag-and-target (--ktt) option as a shorthand for specifying both --koji-tag and --koji-target - Common usage patterns added to usage message - Config file bugfixes - Added 'koji-tag-checker' script which checks for builds that are in both el5 and el6 tags
git-svn-id: file:///p/vdt/workspace/svn/software/osg-build/trunk@14171 4e558342-562e-0410-864c-e07659590f8c

--- a/doc/sample-osg-build.ini
+++ b/doc/sample-osg-build.ini
@@ -4,14 +4,9 @@
 ; temp files made during the build
 ;working_directory=TEMP
 
-; The base of the yum directories to push finished packages to
-; Uncomment to push packages here if a mock or batlab task is used or
-; --push-to-yum is passed.
-yum_base=/p/vdt/public/html/repos/3.0/el5/development/
-
 ; The mock config to use by default
 ; The special value AUTO generates a mock config
-mock_config=AUTO
+;mock_config=AUTO
 
 ; The prefix for the software cache that holds upstream tarballs
 ; Special values are:
@@ -20,24 +15,11 @@ mock_config=AUTO
 ; AUTO: Use AFS if available, VDT if not.
 cache_prefix=AUTO
 
-; The submit machine in the NMI Build and Test Lab to submit batlab jobs to
-;nmi_submit_machine = nmi-s003.cs.wisc.edu
-nmi_submit_machine = submit-1.batlab.org
-
-; Who to send email notifications about job success/failure for batlab
-; tasks.
-;email=
-
-; The distribution tag to append to the end of the release number
-distro_tag=osg
-
 ; The login (your CN) to use for koji. Usually not needed--osg-build will read
 ; it from your ~/.koji/client.crt
 ;kojilogin=Your Name 123456
 
-; The koji target to pass to 'koji build'
-koji_target=el5-osg
-
-; The koji tag to add packages under
-koji_tag=el5-osg
+; How verbose to make osg-build.
+; valid values are 'DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL'
+;loglevel=INFO
 
