Read an ini file for route information
git-svn-id: https://vdt.cs.wisc.edu/svn/software/osg-build/branches/promoterini@21386 4e558342-562e-0410-864c-e07659590f8c

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -1,101 +1,116 @@
 [route 3.1-contrib]
 from=osg-3.1-%s-testing
 to=osg-3.1-%s-contrib
-disttag=osg31
+repotag=osg31
 dvers=el5 el6
+extra_dvers=
 
 [route 3.2-contrib]
 from=osg-3.2-%s-testing
 to=osg-3.2-%s-contrib
-disttag=osg32
+repotag=osg32
 dvers=el5 el6
+extra_dvers=
 
 [route 3.3-contrib]
 from=osg-3.3-%s-testing
 to=osg-3.3-%s-contrib
-disttag=osg33
+repotag=osg33
 dvers=el7 el6
+extra_dvers=
 
 [route 3.1-prerelease]
 from=osg-3.1-%s-testing
 to=osg-3.1-%s-prerelease
-disttag=osg31
+repotag=osg31
 dvers=el5 el6
+extra_dvers=
 
 [route 3.2-prerelease]
 from=osg-3.2-%s-testing
 to=osg-3.2-%s-prerelease
-disttag=osg32
+repotag=osg32
 dvers=el5 el6
+extra_dvers=
 
 [route 3.3-prerelease]
 from=osg-3.3-%s-testing
 to=osg-3.3-%s-prerelease
-disttag=osg33
+repotag=osg33
 dvers=el7 el6
+extra_dvers=
 
 [route 3.1-testing]
 from=osg-3.1-%s-development
 to=osg-3.1-%s-testing
-disttag=osg31
+repotag=osg31
 dvers=el5 el6
+extra_dvers=
 
 [route 3.2-testing]
 from=osg-3.2-%s-development
 to=osg-3.2-%s-testing
-disttag=osg32
+repotag=osg32
 dvers=el5 el6
+extra_dvers=
 
 [route 3.3-testing]
 from=osg-3.3-%s-development
 to=osg-3.3-%s-testing
-disttag=osg33
+repotag=osg33
 dvers=el7 el6
+extra_dvers=
 
 [route hcc]
 from=hcc-%s-testing
 to=hcc-%s-release
-disttag=hcc
+repotag=hcc
 dvers=el5 el6 el7
+extra_dvers=
 
 [route upcoming]
 from=osg-upcoming-%s-development
 to=osg-upcoming-%s-testing
-disttag=osgup
-dvers=el5 el6 el7
+repotag=osgup
+dvers=el5 el6
+extra_dvers=el7
 
 [route upcoming-prerelease]
 from=osg-upcoming-%s-testing
 to=osg-upcoming-%s-prerelease
-disttag=osgup
-dvers=el5 el6 el7
+repotag=osgup
+dvers=el5 el6
+extra_dvers=el7
 
 [route goc-el5-itb]
-from=osg-3.2-el5-development
-to=goc-el5-itb
-disttag=osg32
+from=osg-3.2-%s-development
+to=goc-%s-itb
+repotag=osg32
 dvers=el5
+extra_dvers=
 
 [route goc-itb]
 from=osg-3.3-%s-development
 to=goc-%s-itb
-disttag=osg33
+repotag=osg33
 dvers=el6 el7
+extra_dvers=
 
 [route goc-el5-production]
-from=goc-el5-itb
-to=goc-el5-production
-disttag=osg32
+from=goc-%s-itb
+to=goc-%s-production
+repotag=osg32
 dvers=el5
+extra_dvers=
 
 [route goc-production]
 from=goc-%s-itb
 to=goc-%s-production
-disttag=osg33
+repotag=osg33
 dvers=el6 el7
+extra_dvers=
 
 [aliases]
 contrib=3.2-contrib
 prerelease=3.2-prerelease
 testing=3.2-testing
-
