--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -1,19 +1,19 @@
 [route 3.1-contrib]
-from=osg-3.1-%s-testing
+from=osg-3.1-%s-development
 to=osg-3.1-%s-contrib
 repotag=osg31
 dvers=el5 el6
 extra_dvers=
 
 [route 3.2-contrib]
-from=osg-3.2-%s-testing
+from=osg-3.2-%s-development
 to=osg-3.2-%s-contrib
 repotag=osg32
 dvers=el5 el6
 extra_dvers=
 
 [route 3.3-contrib]
-from=osg-3.3-%s-testing
+from=osg-3.3-%s-development
 to=osg-3.3-%s-contrib
 repotag=osg33
 dvers=el7 el6
