rename promotion routes: goc-el5-* -> 3.2-goc-* (SOFTWARE-1969)
a lot of the goc servers are still on osg-3.2-el6, and the current goc
promotion routes for goc-{itb,production} are 3.3 only, and the only 3.2
option is goc-el5-{itb,production} ... So in fact the one case we care
about (goc-el6-{itb,production} for osg-3.2) has no valid promotion
routes.

Since trunk is 3.3, I'm leaving goc-{itb,production} at osg33, but I'm
making 3.2-goc-{itb,production} routes for el5/el6, for use as long as
the goc uses osg-3.2.


git-svn-id: https://vdt.cs.wisc.edu/svn/software/osg-build/trunk@22015 4e558342-562e-0410-864c-e07659590f8c

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -82,11 +82,11 @@ repotag=osgup
 dvers=el6 el7
 extra_dvers=el5
 
-[route goc-el5-itb]
+[route 3.2-goc-itb]
 from=osg-3.2-%s-development
 to=goc-%s-itb
 repotag=osg32
-dvers=el5
+dvers=el5 el6
 extra_dvers=
 
 [route goc-itb]
@@ -96,11 +96,11 @@ repotag=osg33
 dvers=el6 el7
 extra_dvers=
 
-[route goc-el5-production]
+[route 3.2-goc-production]
 from=goc-%s-itb
 to=goc-%s-production
 repotag=osg32
-dvers=el5
+dvers=el5 el6
 extra_dvers=
 
 [route goc-production]
