--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -1,7 +1,7 @@
 [koji]
 ;configuration for koji cli tool
 ;url of XMLRPC server
-server = http://koji-hub.batlab.org/kojihub
+server = http://koji.chtc.wisc.edu/kojihub
 ;url of web interface
 weburl = http://koji-hub.batlab.org/koji
 ;url of package download site
