Change pkgurl in osg-koji-home.conf (affects config files created in home directories by "osg-koji setup") (SOFTWARE-2175)
git-svn-id: https://vdt.cs.wisc.edu/svn/software/osg-build/branches/kojihubrename@22528 4e558342-562e-0410-864c-e07659590f8c

--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -5,7 +5,7 @@ server = http://koji.chtc.wisc.edu/kojihub
 ;url of web interface
 weburl = http://koji-hub.batlab.org/koji
 ;url of package download site
-pkgurl = http://koji-hub.batlab.org/packages
+pkgurl = http://koji.chtc.wisc.edu/packages
 ;path to the koji top directory
 topdir = /mnt/koji
 ;configuration for SSL authentication
