--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -3,7 +3,7 @@
 ;url of XMLRPC server
 server = http://koji.chtc.wisc.edu/kojihub
 ;url of web interface
-weburl = http://koji-hub.batlab.org/koji
+weburl = http://koji.chtc.wisc.edu/koji
 ;url of package download site
 pkgurl = http://koji.chtc.wisc.edu/packages
 ;path to the koji top directory
