Update template config to koji 1.11 version (SOFTWARE-2566)

--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -4,10 +4,9 @@
 server = http://koji.chtc.wisc.edu/kojihub
 ;url of web interface
 weburl = http://koji.chtc.wisc.edu/koji
-;url of package download site
-pkgurl = http://koji.chtc.wisc.edu/packages
-;path to the koji top directory
-topdir = /mnt/koji
+;url for koji file access
+topurl = http://koji.chtc.wisc.edu
+
 ;configuration for SSL authentication
 ;client certificate
 cert = ~/.osg-koji/client.crt
