--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -7,6 +7,11 @@ weburl = http://koji.chtc.wisc.edu/koji
 ;url for koji file access
 topurl = http://koji.chtc.wisc.edu
 
+; use_old_ssl uses koji.compatrequests instead of requests
+; This allows our passphrase caching patches to work.
+; Set use_old_ssl=True unless using a grid proxy.
+use_old_ssl = True
+
 ;configuration for SSL authentication
 ;client certificate
 cert = ~/.osg-koji/client.crt
