--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -19,6 +19,13 @@ repotag=osg33
 dvers=el7 el6
 extra_dvers=
 
+[route 3.4-contrib]
+from=osg-3.4-%s-development
+to=osg-3.4-%s-contrib
+repotag=osg34
+dvers=el7 el6
+extra_dvers=
+
 [route 3.1-prerelease]
 from=osg-3.1-%s-testing
 to=osg-3.1-%s-prerelease
@@ -37,6 +44,13 @@ extra_dvers=
 from=osg-3.3-%s-testing
 to=osg-3.3-%s-prerelease
 repotag=osg33
+dvers=el7 el6
+extra_dvers=
+
+[route 3.4-prerelease]
+from=osg-3.4-%s-testing
+to=osg-3.4-%s-prerelease
+repotag=osg34
 dvers=el7 el6
 extra_dvers=
 
@@ -61,6 +75,13 @@ repotag=osg33
 dvers=el7 el6
 extra_dvers=
 
+[route 3.4-testing]
+from=osg-3.4-%s-development
+to=osg-3.4-%s-testing
+repotag=osg34
+dvers=el7 el6
+extra_dvers=
+
 [route hcc]
 from=hcc-%s-testing
 to=hcc-%s-release
@@ -73,14 +94,14 @@ from=osg-upcoming-%s-development
 to=osg-upcoming-%s-testing
 repotag=osgup
 dvers=el6 el7
-extra_dvers=el5
+extra_dvers=
 
 [route upcoming-prerelease]
 from=osg-upcoming-%s-testing
 to=osg-upcoming-%s-prerelease
 repotag=osgup
 dvers=el6 el7
-extra_dvers=el5
+extra_dvers=
 
 [route 3.2-goc-itb]
 from=osg-3.2-%s-development
