Drop el5 promotion route for hcc (SOFTWARE-2730)

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -86,7 +86,7 @@ extra_dvers=
 from=hcc-%s-testing
 to=hcc-%s-release
 repotag=hcc
-dvers=el5 el6 el7
+dvers=el6 el7
 extra_dvers=
 
 [route upcoming]
