Update rpmlint filters

--- a/data/rpmlint.cfg
+++ b/data/rpmlint.cfg
@@ -6,4 +6,9 @@ addFilter("no-%build-section")
 addFilter("invalid-url")
 addFilter("source-or-patch-not-compressed")
 addFilter("no-packager-tag")
-
+# following not needed in EL 6+
+addFilter("no-cleaning-of-buildroot")
+addFilter("no-buildroot-tag")
+addFilter("no-%clean-section")
+# rpmlint is missing valid licenses like ASL 2.0 (Apache Software License 2.0)
+addFilter("invalid-license")
