Add rolling routes

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -26,6 +26,13 @@ repotag=osg34
 dvers=el7 el6
 extra_dvers=
 
+[route 3.4-rolling]
+from=osg-3.4-%s-testing
+to=osg-3.4-%s-rolling
+repotag=osg34
+dvers=el6 el7
+extra_dvers=
+
 [route 3.3-testing]
 from=osg-3.3-%s-development
 to=osg-3.3-%s-testing
@@ -61,6 +68,13 @@ repotag=osgup
 dvers=el6 el7
 extra_dvers=
 
+[route upcoming-rolling]
+from=osg-upcoming-%s-testing
+to=osg-upcoming-%s-rolling
+repotag=osgup
+dvers=el6 el7
+extra_dvers=
+
 [route goc-itb]
 from=osg-3.4-%s-development
 to=goc-%s-itb
@@ -75,7 +89,13 @@ repotag=osg34
 dvers=el6 el7
 extra_dvers=
 
+[multiroutes]
+3.4-rfr=3.4-prerelease 3.4-rolling
+rfr=3.4-prerelease 3.4-rolling
+upcoming-rfr=upcoming-prerelease upcoming-rolling
+
 [aliases]
 contrib=3.4-contrib
 prerelease=3.4-prerelease
+rolling=3.4-rolling
 testing=3.4-testing
