Turn multiroutes into comma-separated aliases
Doesn't do anything with them yet

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -89,13 +89,12 @@ repotag=osg34
 dvers=el6 el7
 extra_dvers=
 
-[multiroutes]
-3.4-rfr=3.4-prerelease 3.4-rolling
-rfr=3.4-prerelease 3.4-rolling
-upcoming-rfr=upcoming-prerelease upcoming-rolling
-
 [aliases]
 contrib=3.4-contrib
 prerelease=3.4-prerelease
 rolling=3.4-rolling
 testing=3.4-testing
+3.4-rfr=3.4-prerelease,3.4-rolling
+rfr=3.4-prerelease,3.4-rolling
+upcoming-rfr=upcoming-prerelease,upcoming-rolling
+
