Aliases for multiple routes
Also restructured how the loaded config is handled.

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -97,4 +97,5 @@ testing=3.4-testing
 3.4-rfr=3.4-prerelease,3.4-rolling
 rfr=3.4-prerelease,3.4-rolling
 upcoming-rfr=upcoming-prerelease,upcoming-rolling
+default=3.4-testing
 
