--- a/data/osg-koji-site.conf
+++ b/data/osg-koji-site.conf
@@ -1,11 +1,11 @@
 [koji]
 ;configuration for koji cli tool
 ;url of XMLRPC server
-server = http://koji.chtc.wisc.edu/kojihub
+server = http://koji.opensciencegrid.org/kojihub
 ;url of web interface
-weburl = http://koji.chtc.wisc.edu/koji
+weburl = http://koji.opensciencegrid.org/koji
 ;url of package download site
-pkgurl = http://koji.chtc.wisc.edu/packages
+pkgurl = http://koji.opensciencegrid.org/packages
 ;path to the koji top directory
 topdir = /mnt/koji
 ;configuration for SSL authentication
