--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -12,6 +12,13 @@ repotag=osg34
 dvers=el7 el6
 extra_dvers=
 
+[route 3.5-contrib]
+from=osg-3.5-%s-development
+to=osg-3.5-%s-contrib
+repotag=osg35
+dvers=el7
+extra_dvers=
+
 [route 3.3-prerelease]
 from=osg-3.3-%s-testing
 to=osg-3.3-%s-prerelease
@@ -26,11 +33,25 @@ repotag=osg34
 dvers=el7 el6
 extra_dvers=
 
+[route 3.5-prerelease]
+from=osg-3.5-%s-testing
+to=osg-3.5-%s-prerelease
+repotag=osg35
+dvers=el7
+extra_dvers=
+
 [route 3.4-rolling]
 from=osg-3.4-%s-testing
 to=osg-3.4-%s-rolling
 repotag=osg34
 dvers=el6 el7
+extra_dvers=
+
+[route 3.5-rolling]
+from=osg-3.5-%s-testing
+to=osg-3.5-%s-rolling
+repotag=osg35
+dvers=el7
 extra_dvers=
 
 [route 3.3-testing]
@@ -45,6 +66,13 @@ from=osg-3.4-%s-development
 to=osg-3.4-%s-testing
 repotag=osg34
 dvers=el7 el6
+extra_dvers=
+
+[route 3.5-testing]
+from=osg-3.5-%s-development
+to=osg-3.5-%s-testing
+repotag=osg35
+dvers=el7
 extra_dvers=
 
 [route hcc]
