add 3.5-rfr alias (SOFTWARE-3761)

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -123,6 +123,7 @@ prerelease=3.4-prerelease
 rolling=3.4-rolling
 testing=3.4-testing
 3.4-rfr=3.4-prerelease,3.4-rolling
+3.5-rfr=3.5-prerelease,3.5-rolling
 rfr=3.4-prerelease,3.4-rolling
 upcoming-rfr=upcoming-prerelease,upcoming-rolling
 default=3.4-testing
