osg-promote: drop el6 from upcoming*; change default routes and aliases to point to 3.5

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -86,21 +86,21 @@ extra_dvers=
 from=osg-upcoming-%s-development
 to=osg-upcoming-%s-testing
 repotag=osgup
-dvers=el6 el7
+dvers=el7
 extra_dvers=
 
 [route upcoming-prerelease]
 from=osg-upcoming-%s-testing
 to=osg-upcoming-%s-prerelease
 repotag=osgup
-dvers=el6 el7
+dvers=el7
 extra_dvers=
 
 [route upcoming-rolling]
 from=osg-upcoming-%s-testing
 to=osg-upcoming-%s-rolling
 repotag=osgup
-dvers=el6 el7
+dvers=el7
 extra_dvers=
 
 [route goc-itb]
@@ -132,13 +132,13 @@ dvers=el7
 extra_dvers=
 
 [aliases]
-contrib=3.4-contrib
-prerelease=3.4-prerelease
-rolling=3.4-rolling
-testing=3.4-testing
+contrib=3.5-contrib
+prerelease=3.5-prerelease
+rolling=3.5-rolling
+testing=3.5-testing
 3.4-rfr=3.4-prerelease,3.4-rolling
 3.5-rfr=3.5-prerelease,3.5-rolling
-rfr=3.4-prerelease,3.4-rolling
+rfr=3.5-prerelease,3.5-rolling
 upcoming-rfr=upcoming-prerelease,upcoming-rolling
-default=3.4-testing
+default=3.5-testing
 
