Set authtype=ssl in the config files; avoids having to pass --authtype=ssl when calling the koji program (though osg-koji does that for you)

--- a/data/osg-koji-site.conf
+++ b/data/osg-koji-site.conf
@@ -9,6 +9,7 @@ pkgurl = http://koji.opensciencegrid.org/packages
 ;path to the koji top directory
 topdir = /mnt/koji
 ;configuration for SSL authentication
+authtype = ssl
 ;client certificate
 cert = ~/.koji/client.crt
 ;certificate of the CA that issued the client certificate
