--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -13,6 +13,7 @@ topurl = http://koji.opensciencegrid.org
 use_old_ssl = True
 
 ;configuration for SSL authentication
+authtype = ssl
 ;client certificate
 cert = ~/.osg-koji/client.crt
 ;certificate of the CA that issued the client certificate
