Drop server CA bundle and use the OS CA bundle instead (SOFTWARE-4099)

--- a/data/osg-koji-home.conf
+++ b/data/osg-koji-home.conf
@@ -19,5 +19,5 @@ cert = ~/.osg-koji/client.crt
 ;certificate of the CA that issued the client certificate
 ca = ~/.osg-koji/osg-ca-bundle.crt
 ;certificate of the CA that issued the HTTP server certificate
-serverca = ~/.osg-koji/osg-ca-bundle.crt
+serverca = /etc/pki/tls/certs/ca-bundle.crt
 
