Also promote el8 by default (use --no-el8 or --el7-only to turn off)  (SOFTWARE-4277)

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -16,8 +16,8 @@ extra_dvers=
 from=osg-3.5-%s-development
 to=osg-3.5-%s-contrib
 repotag=osg35
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route 3.3-prerelease]
 from=osg-3.3-%s-testing
@@ -37,8 +37,8 @@ extra_dvers=
 from=osg-3.5-%s-testing
 to=osg-3.5-%s-prerelease
 repotag=osg35
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route 3.4-rolling]
 from=osg-3.4-%s-testing
@@ -51,8 +51,8 @@ extra_dvers=
 from=osg-3.5-%s-testing
 to=osg-3.5-%s-rolling
 repotag=osg35
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route 3.3-testing]
 from=osg-3.3-%s-development
@@ -72,8 +72,8 @@ extra_dvers=
 from=osg-3.5-%s-development
 to=osg-3.5-%s-testing
 repotag=osg35
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route hcc]
 from=hcc-%s-testing
@@ -86,22 +86,22 @@ extra_dvers=el8
 from=osg-upcoming-%s-development
 to=osg-upcoming-%s-testing
 repotag=osgup
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route upcoming-prerelease]
 from=osg-upcoming-%s-testing
 to=osg-upcoming-%s-prerelease
 repotag=osgup
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route upcoming-rolling]
 from=osg-upcoming-%s-testing
 to=osg-upcoming-%s-rolling
 repotag=osgup
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route goc-itb]
 from=osg-3.4-%s-development
@@ -121,15 +121,15 @@ extra_dvers=
 from=osg-3.5-%s-development
 to=devops-%s-itb
 repotag=osg35
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [route devops-production]
 from=devops-%s-itb
 to=devops-%s-production
 repotag=osg35
-dvers=el7
-extra_dvers=el8
+dvers=el7 el8
+extra_dvers=
 
 [aliases]
 contrib=3.5-contrib
