Updating osg-promote tests and routes for new Koji tags

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -1,10 +1,3 @@
-[route 3.3-contrib]
-from=osg-3.3-%s-development
-to=osg-3.3-%s-contrib
-repotag=osg33
-dvers=el7 el6
-extra_dvers=
-
 [route 3.4-contrib]
 from=osg-3.4-%s-development
 to=osg-3.4-%s-contrib
@@ -17,13 +10,6 @@ from=osg-3.5-%s-development
 to=osg-3.5-%s-contrib
 repotag=osg35
 dvers=el7 el8
-extra_dvers=
-
-[route 3.3-prerelease]
-from=osg-3.3-%s-testing
-to=osg-3.3-%s-prerelease
-repotag=osg33
-dvers=el7 el6
 extra_dvers=
 
 [route 3.4-prerelease]
@@ -52,13 +38,6 @@ from=osg-3.5-%s-testing
 to=osg-3.5-%s-rolling
 repotag=osg35
 dvers=el7 el8
-extra_dvers=
-
-[route 3.3-testing]
-from=osg-3.3-%s-development
-to=osg-3.3-%s-testing
-repotag=osg33
-dvers=el7 el6
 extra_dvers=
 
 [route 3.4-testing]
@@ -138,7 +117,7 @@ rolling=3.5-rolling
 testing=3.5-testing
 3.4-rfr=3.4-prerelease,3.4-rolling
 3.5-rfr=3.5-prerelease,3.5-rolling
+3.6-rfr=3.6-prerelease
 rfr=3.5-prerelease,3.5-rolling
 upcoming-rfr=upcoming-prerelease,upcoming-rolling
 default=3.5-testing
-
