promotion routes for 3.6

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -12,6 +12,13 @@ repotag=osg35
 dvers=el7 el8
 extra_dvers=
 
+[route 3.6-contrib]
+from=osg-3.6-%s-development
+to=osg-3.6-%s-contrib
+repotag=osg36
+dvers=el7 el8
+extra_dvers=
+
 [route 3.4-prerelease]
 from=osg-3.4-%s-testing
 to=osg-3.4-%s-prerelease
@@ -23,6 +30,13 @@ extra_dvers=
 from=osg-3.5-%s-testing
 to=osg-3.5-%s-prerelease
 repotag=osg35
+dvers=el7 el8
+extra_dvers=
+
+[route 3.6-prerelease]
+from=osg-3.6-%s-testing
+to=osg-3.6-%s-prerelease
+repotag=osg36
 dvers=el7 el8
 extra_dvers=
 
@@ -51,6 +65,13 @@ extra_dvers=
 from=osg-3.5-%s-development
 to=osg-3.5-%s-testing
 repotag=osg35
+dvers=el7 el8
+extra_dvers=
+
+[route 3.6-testing]
+from=osg-3.6-%s-development
+to=osg-3.6-%s-testing
+repotag=osg36
 dvers=el7 el8
 extra_dvers=
 
