Add promotion routes for versioned upcoming repos and update osg-promote tests

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -103,6 +103,41 @@ repotag=osgup
 dvers=el7 el8
 extra_dvers=
 
+[route 3.5-upcoming]
+from=osg-3.5-upcoming-%s-development
+to=osg-3.5-upcoming-%s-testing
+repotag=osg35up
+dvers=el7 el8
+extra_dvers=
+
+[route 3.5-upcoming-prerelease]
+from=osg-3.5-upcoming-%s-testing
+to=osg-3.5-upcoming-%s-prerelease
+repotag=osg35up
+dvers=el7 el8
+extra_dvers=
+
+[route 3.5-upcoming-rolling]
+from=osg-3.5-upcoming-%s-testing
+to=osg-3.5-upcoming-%s-rolling
+repotag=osg35up
+dvers=el7 el8
+extra_dvers=
+
+[route 3.6-upcoming]
+from=osg-3.6-upcoming-%s-development
+to=osg-3.6-upcoming-%s-testing
+repotag=osg36up
+dvers=el7 el8
+extra_dvers=
+
+[route 3.6-upcoming-prerelease]
+from=osg-3.6-upcoming-%s-testing
+to=osg-3.6-upcoming-%s-prerelease
+repotag=osg36up
+dvers=el7 el8
+extra_dvers=
+
 [route goc-itb]
 from=osg-3.4-%s-development
 to=goc-%s-itb
