Promotion route aliases for the 3.X-upcoming routes

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -176,4 +176,11 @@ testing=3.5-testing
 3.6-rfr=3.6-prerelease
 rfr=3.5-prerelease,3.5-rolling
 upcoming-rfr=upcoming-prerelease,upcoming-rolling
+3.5-up=3.5-upcoming
+3.5-up-prerelease=3.5-upcoming-prerelease
+3.5-up-rolling=3.5-upcoming-rolling
+3.5-up-rfr=3.5-upcoming-prerelease,3.5-upcoming-rolling
+3.6-up=3.6-upcoming
+3.6-up-prerelease=3.6-upcoming-prerelease
+3.6-up-rfr=3.6-upcoming-prerelease
 default=3.5-testing
