--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -17,7 +17,7 @@ from=osg-3.6-%s-development
 to=osg-3.6-%s-contrib
 repotag=osg36
 dvers=el7 el8
-extra_dvers=
+extra_dvers=el9
 
 [route 3.4-prerelease]
 from=osg-3.4-%s-testing
@@ -38,7 +38,7 @@ from=osg-3.6-%s-testing
 to=osg-3.6-%s-prerelease
 repotag=osg36
 dvers=el7 el8
-extra_dvers=
+extra_dvers=el9
 
 [route 3.4-rolling]
 from=osg-3.4-%s-testing
@@ -73,14 +73,14 @@ from=osg-3.6-%s-development
 to=osg-3.6-%s-testing
 repotag=osg36
 dvers=el7 el8
-extra_dvers=
+extra_dvers=el9
 
 [route hcc]
 from=hcc-%s-testing
 to=hcc-%s-release
 repotag=hcc
 dvers=el6 el7
-extra_dvers=el8
+extra_dvers=el8 el9
 
 [route upcoming]
 from=osg-upcoming-%s-development
@@ -129,14 +129,14 @@ from=osg-3.6-upcoming-%s-development
 to=osg-3.6-upcoming-%s-testing
 repotag=osg36up
 dvers=el7 el8
-extra_dvers=
+extra_dvers=el9
 
 [route 3.6-upcoming-prerelease]
 from=osg-3.6-upcoming-%s-testing
 to=osg-3.6-upcoming-%s-prerelease
 repotag=osg36up
 dvers=el7 el8
-extra_dvers=
+extra_dvers=el9
 
 [route goc-itb]
 from=osg-3.4-%s-development
