Build and promote for EL9 as well by default for OSG 3.6

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -9,8 +9,8 @@ extra_dvers=
 from=osg-3.6-%s-development
 to=osg-3.6-%s-contrib
 repotag=osg36
-dvers=el7 el8
-extra_dvers=el9
+dvers=el7 el8 el9
+extra_dvers=
 
 [route 3.5-prerelease]
 from=osg-3.5-%s-testing
@@ -23,8 +23,8 @@ extra_dvers=
 from=osg-3.6-%s-testing
 to=osg-3.6-%s-prerelease
 repotag=osg36
-dvers=el7 el8
-extra_dvers=el9
+dvers=el7 el8 el9
+extra_dvers=
 
 [route 3.5-rolling]
 from=osg-3.5-%s-testing
@@ -44,8 +44,8 @@ extra_dvers=
 from=osg-3.6-%s-development
 to=osg-3.6-%s-testing
 repotag=osg36
-dvers=el7 el8
-extra_dvers=el9
+dvers=el7 el8 el9
+extra_dvers=
 
 [route hcc]
 from=hcc-%s-testing
@@ -100,15 +100,15 @@ extra_dvers=
 from=osg-3.6-upcoming-%s-development
 to=osg-3.6-upcoming-%s-testing
 repotag=osg36up
-dvers=el7 el8
-extra_dvers=el9
+dvers=el7 el8 el9
+extra_dvers=
 
 [route 3.6-upcoming-prerelease]
 from=osg-3.6-upcoming-%s-testing
 to=osg-3.6-upcoming-%s-prerelease
 repotag=osg36up
-dvers=el7 el8
-extra_dvers=el9
+dvers=el7 el8 el9
+extra_dvers=
 
 [route devops-itb]
 from=osg-3.5-%s-development
