drop el6 from promoter.ini

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -51,7 +51,7 @@ extra_dvers=el9
 from=hcc-%s-testing
 to=hcc-%s-release
 repotag=hcc
-dvers=el6 el7
+dvers=el7
 extra_dvers=el8 el9
 
 [route upcoming]
