--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -110,6 +110,34 @@ repotag=osg36up
 dvers=el7 el8 el9
 extra_dvers=
 
+[route 3.7-main]
+from=osg-3.7-main-%s-development
+to=osg-3.7-main-%s-testing
+repotag=osg37
+dvers=el8 el9
+extra_dvers=
+
+[route 3.7-main-prerelease]
+from=osg-3.7-main-%s-testing
+to=osg-3.7-main-%s-prerelease
+repotag=osg37
+dvers=el8 el9
+extra_dvers=
+
+[route 3.7-upcoming]
+from=osg-3.7-upcoming-%s-development
+to=osg-3.7-upcoming-%s-testing
+repotag=osg37up
+dvers=el8 el9
+extra_dvers=
+
+[route 3.7-upcoming-prerelease]
+from=osg-3.7-upcoming-%s-testing
+to=osg-3.7-upcoming-%s-prerelease
+repotag=osg37up
+dvers=el8 el9
+extra_dvers=
+
 [route devops-itb]
 from=osg-3.5-%s-development
 to=devops-%s-itb
@@ -140,4 +168,6 @@ upcoming-rfr=upcoming-prerelease,upcoming-rolling
 3.6-up=3.6-upcoming
 3.6-up-prerelease=3.6-upcoming-prerelease
 3.6-up-rfr=3.6-upcoming-prerelease
+3.7-testing=3.7-main
+3.7-prerelease=3.7-main-prerelease
 default=3.5-testing
