Change 3.7 -> 23 in promoter.ini as well

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -110,31 +110,31 @@ repotag=osg36up
 dvers=el7 el8 el9
 extra_dvers=
 
-[route 3.7-main]
-from=osg-3.7-main-%s-development
-to=osg-3.7-main-%s-testing
-repotag=osg37
+[route 23-main]
+from=osg-23-main-%s-development
+to=osg-23-main-%s-testing
+repotag=osg23
 dvers=el8 el9
 extra_dvers=
 
-[route 3.7-main-prerelease]
-from=osg-3.7-main-%s-testing
-to=osg-3.7-main-%s-prerelease
-repotag=osg37
+[route 23-main-prerelease]
+from=osg-23-main-%s-testing
+to=osg-23-main-%s-prerelease
+repotag=osg23
 dvers=el8 el9
 extra_dvers=
 
-[route 3.7-upcoming]
-from=osg-3.7-upcoming-%s-development
-to=osg-3.7-upcoming-%s-testing
-repotag=osg37up
+[route 23-upcoming]
+from=osg-23-upcoming-%s-development
+to=osg-23-upcoming-%s-testing
+repotag=osg23up
 dvers=el8 el9
 extra_dvers=
 
-[route 3.7-upcoming-prerelease]
-from=osg-3.7-upcoming-%s-testing
-to=osg-3.7-upcoming-%s-prerelease
-repotag=osg37up
+[route 23-upcoming-prerelease]
+from=osg-23-upcoming-%s-testing
+to=osg-23-upcoming-%s-prerelease
+repotag=osg23up
 dvers=el8 el9
 extra_dvers=
 
@@ -157,5 +157,5 @@ extra_dvers=
 3.6-up=3.6-upcoming
 3.6-up-prerelease=3.6-upcoming-prerelease
 3.6-up-rfr=3.6-upcoming-prerelease
-3.7-testing=3.7-main
-3.7-prerelease=3.7-main-prerelease
+23-testing=23-main
+23-prerelease=23-main-prerelease
