--- a/data/osg-koji-site.conf
+++ b/data/osg-koji-site.conf
@@ -1,19 +1,23 @@
 [koji]
 ;configuration for koji cli tool
+srv = koji.opensciencegrid.org
+
 ;url of XMLRPC server
-server = http://koji.opensciencegrid.org/kojihub
+server = https://%(srv)s/kojihub
 ;url of web interface
-weburl = http://koji.opensciencegrid.org/koji
-;url of package download site
-pkgurl = http://koji.opensciencegrid.org/packages
-;path to the koji top directory
-topdir = /mnt/koji
+weburl = https://%(srv)s/koji
+;url for koji file access
+topurl = https://%(srv)s/kojifiles
+
+; use_old_ssl uses koji.compatrequests instead of requests
+; This allows our passphrase caching patches to work.
+; Set use_old_ssl=True unless using a grid proxy.
+use_old_ssl = True
+
 ;configuration for SSL authentication
 authtype = ssl
 ;client certificate
 cert = ~/.koji/client.crt
-;certificate of the CA that issued the client certificate
-ca = /etc/pki/tls/certs/ca-bundle.crt
 ;certificate of the CA that issued the HTTP server certificate
 serverca = /etc/pki/tls/certs/ca-bundle.crt
 
