build and promote devops for el9 by default and fix dist tag

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -148,8 +148,8 @@ extra_dvers=
 [route devops-production]
 from=devops-%s-itb
 to=devops-%s-production
-repotag=osg35
-dvers=el7 el8
+repotag=osgdevops
+dvers=el7 el8 el9
 extra_dvers=
 
 [aliases]
