Update osg-koji.conf with new variables
Don't drop use_old_ssl yet (we'll drop it in V2-branch)

--- a/data/osg-koji.conf
+++ b/data/osg-koji.conf
@@ -1,13 +1,14 @@
 [koji]
 ;configuration for koji cli tool
-srv = koji.opensciencegrid.org
+koji_hub = koji.opensciencegrid.org
+koji_web = %(koji_hub)s
 
 ;url of XMLRPC server
-server = https://%(srv)s/kojihub
+server = https://%(koji_hub)s/kojihub
 ;url of web interface
-weburl = https://%(srv)s/koji
+weburl = https://%(koji_web)s/koji
 ;url for koji file access
-topurl = https://%(srv)s/kojifiles
+topurl = https://%(koji_hub)s/kojifiles
 
 ; use_old_ssl uses koji.compatrequests instead of requests
 ; This allows our passphrase caching patches to work.
@@ -20,4 +21,3 @@ authtype = ssl
 cert = ~/.osg-koji/client.crt
 ;certificate of the CA that issued the HTTP server certificate
 serverca = /etc/pki/tls/certs/ca-bundle.crt
-
