Use new osg-htc.org CNAME for koji-hub

--- a/data/osg-koji.conf.in
+++ b/data/osg-koji.conf.in
@@ -1,6 +1,6 @@
 [koji]
 ;configuration for koji cli tool
-koji_hub = koji.opensciencegrid.org
+koji_hub = koji.osg-htc.org
 koji_web = %(koji_hub)s
 
 ;url of XMLRPC server
