Package up the data as well
Looked like the easiest way to make the data pip installable
as well was to make a submodule, stick the data files in
with the submodule, then declare it in setup.cfg, add
include_package_data, and also add a MANIFEST.in file.

I will later be able to access the data via pkg_resources
(https://setuptools.pypa.io/en/latest/pkg_resources.html#basic-resource-access)
which is deprecated but its replacement, importlib.resources,
isn't available in Python 3.6, and the backport importlib_resources
isn't available as an RPM.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,8 @@ maintainer_email = software-discuss@opensciencegrid.org
 [options]
 packages =
     osgbuild
+    osgbuild.data
+include_package_data = True
 python_requires = >=3.6
 scripts =
     fetch-dot-source
