Use resources in osg-koji and osg-sign
On second thought, importlib_resources is available as an RPM
on EL 8, and we can use stdlib importlib.resources on EL 9.
Use it and avoid annoying deprecation warnings.

I don't yet use it to find promoter.ini because I want to avoid
merge conflicts with PRs I plan to make.

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ packages =
     osgbuild.data
 include_package_data = True
 python_requires = >=3.6
+install_requires = importlib_resources
 scripts =
     fetch-dot-source
     koji-tag-diff
