Always require koji

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,9 @@ packages =
     osgbuild.data
 include_package_data = True
 python_requires = >=3.6
-install_requires = importlib_resources
+install_requires =
+    importlib_resources
+    koji>=1.24
 scripts =
     fetch-dot-source
     koji-tag-diff
@@ -26,7 +28,3 @@ console_scripts =
     osg-koji = osgbuild.osg_koji:main
     osg-promote = osgbuild.promoter:entrypoint
     osg-sign = osgbuild.osg_sign:entrypoint
-
-[options.extras_require]
-koji =
-    koji>=1.24
