Add promotion route for 23-internal

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -68,6 +68,13 @@ repotag=osg23up
 dvers=el8 el9
 extra_dvers=
 
+[route 23-internal]
+from=osg-23-internal-%s-development
+to=osg-23-internal-%s-release
+repotag=osg23int
+dvers=el8 el9
+extra_dvers=
+
 [route devops-production]
 from=devops-%s-itb
 to=devops-%s-production
