Add required key information to promoter.ini and Route object
required_keys is a new optional attribute for each route; it references the
keys in signing_keys.ini.  At least one of the keys listed must be used to sign
each package promoted using that route.

The key info in signing_keys.ini lists which distro versions a key can be used
to sign for (for example "OSG-4" can only be used on el9).  The actual key
required for a given build on a route is the intersection of the required_keys
for that route and the dver of that build.  I added a required_keys_for_dver()
method to Route for getting that intersection; this meant I had to turn Route
from a namedtuple to an object.  As a bonus, I get better type checking.

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -4,6 +4,7 @@ to=osg-3.6-%s-contrib
 repotag=osg36
 dvers=el7 el8 el9
 extra_dvers=
+required_keys=OSG-2 OSG-4
 
 [route 3.6-prerelease]
 from=osg-3.6-%s-testing
@@ -11,6 +12,7 @@ to=osg-3.6-%s-prerelease
 repotag=osg36
 dvers=el7 el8 el9
 extra_dvers=
+required_keys=OSG-2 OSG-4
 
 [route 3.6-testing]
 from=osg-3.6-%s-development
@@ -18,6 +20,7 @@ to=osg-3.6-%s-testing
 repotag=osg36
 dvers=el7 el8 el9
 extra_dvers=
+required_keys=OSG-2 OSG-4
 
 [route hcc]
 from=hcc-%s-testing
@@ -25,6 +28,7 @@ to=hcc-%s-release
 repotag=hcc
 dvers=el7
 extra_dvers=el8 el9
+required_keys=HCC HCC-2
 
 [route 3.6-upcoming]
 from=osg-3.6-upcoming-%s-development
@@ -32,6 +36,7 @@ to=osg-3.6-upcoming-%s-testing
 repotag=osg36up
 dvers=el7 el8 el9
 extra_dvers=
+required_keys=OSG-2 OSG-4
 
 [route 3.6-upcoming-prerelease]
 from=osg-3.6-upcoming-%s-testing
@@ -39,6 +44,7 @@ to=osg-3.6-upcoming-%s-prerelease
 repotag=osg36up
 dvers=el7 el8 el9
 extra_dvers=
+required_keys=OSG-2 OSG-4
 
 [route 23-main]
 from=osg-23-main-%s-development
@@ -46,6 +52,7 @@ to=osg-23-main-%s-testing
 repotag=osg23
 dvers=el8 el9
 extra_dvers=
+required_keys=OSG-23-developer
 
 [route 23-main-prerelease]
 from=osg-23-main-%s-testing
@@ -53,6 +60,7 @@ to=osg-23-main-%s-prerelease
 repotag=osg23
 dvers=el8 el9
 extra_dvers=
+required_keys=OSG-23-developer
 
 [route 23-upcoming]
 from=osg-23-upcoming-%s-development
@@ -60,6 +68,7 @@ to=osg-23-upcoming-%s-testing
 repotag=osg23up
 dvers=el8 el9
 extra_dvers=
+required_keys=OSG-23-developer
 
 [route 23-upcoming-prerelease]
 from=osg-23-upcoming-%s-testing
@@ -67,6 +76,7 @@ to=osg-23-upcoming-%s-prerelease
 repotag=osg23up
 dvers=el8 el9
 extra_dvers=
+required_keys=OSG-23-developer
 
 [route 23-internal]
 from=osg-23-internal-%s-development
@@ -74,6 +84,7 @@ to=osg-23-internal-%s-release
 repotag=osg23int
 dvers=el8 el9
 extra_dvers=
+required_keys=OSG-23-developer
 
 [route devops-production]
 from=devops-%s-itb
@@ -81,6 +92,7 @@ to=devops-%s-production
 repotag=osgdevops
 dvers=el7 el8 el9
 extra_dvers=
+required_keys=OSG-2 OSG-4
 
 [aliases]
 3.6-rfr=3.6-prerelease
