Add some more metadata to the package

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,11 @@ author = Matyas Selmeci
 author_email = matyas@cs.wisc.edu
 maintainer = OSG Software Team
 maintainer_email = software-discuss@opensciencegrid.org
+description = Tools for RPM development for the OSG Software Stack
+url = https://github.com/opensciencegrid/osg-build
+project_urls =
+    Documentation = https://osg-htc.org/technology/software/osg-build-tools/
+license = ASL 2.0
 
 [options]
 packages =
