Use preferred email address for software-discuss

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: osgbuild.version.__version__
 author = Matyas Selmeci
 author_email = matyas@cs.wisc.edu
 maintainer = OSG Software Team
-maintainer_email = software-discuss@opensciencegrid.org
+maintainer_email = software-discuss@osg-htc.org
 description = Tools for RPM development for the OSG Software Stack
 url = https://github.com/opensciencegrid/osg-build
 project_urls =
