--- a/data/signing_keys.ini
+++ b/data/signing_keys.ini
@@ -25,3 +25,8 @@ digest_algo = sha256
 keyid=92897c00
 dvers=el8 el9
 digest_algo = sha256
+
+;[key CHTC]
+;keyid=
+;dvers=el8 el9
+;digest_algo = sha256
