Actually make chtc el9-only by default; have el8 as an extra dver in osg-promote

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -98,16 +98,16 @@ required_keys=OSG-2 OSG-4
 from=chtc-%s-development
 to=chtc-%s-testing
 repotag=chtc
-dvers=el8 el9
-extra_dvers=
+dvers=el9
+extra_dvers=el8
 ;required_keys=CHTC
 
 [route chtc-release]
 from=chtc-%s-testing
 to=chtc-%s-release
 repotag=chtc
-dvers=el8 el9
-extra_dvers=
+dvers=el9
+extra_dvers=el8
 ;required_keys=CHTC
 
 [aliases]
