Add signing key for CHTC to config

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -100,7 +100,7 @@ to=chtc-%s-testing
 repotag=chtc
 dvers=el9
 extra_dvers=el8
-;required_keys=CHTC
+required_keys=CHTC
 
 [route chtc-release]
 from=chtc-%s-testing
@@ -108,7 +108,7 @@ to=chtc-%s-release
 repotag=chtc
 dvers=el9
 extra_dvers=el8
-;required_keys=CHTC
+required_keys=CHTC
 
 [aliases]
 3.6-rfr=3.6-prerelease
