--- a/data/signing_keys.ini
+++ b/data/signing_keys.ini
@@ -26,7 +26,7 @@ keyid=92897c00
 dvers=el8 el9
 digest_algo = sha256
 
-;[key CHTC]
-;keyid=
-;dvers=el8 el9
-;digest_algo = sha256
+[key CHTC]
+keyid=30ad7213
+dvers=el8 el9
+digest_algo = sha256
