osg-build, osg-promote, and osg-sign changes to support OSG 24 (SOFTWARE-5960)

--- a/data/promoter.ini
+++ b/data/promoter.ini
@@ -46,6 +46,12 @@ dvers=el7 el8 el9
 extra_dvers=
 required_keys=OSG-2 OSG-4
 
+#
+#
+# OSG 23
+#
+#
+
 [route 23-main]
 from=osg-23-main-%s-development
 to=osg-23-main-%s-testing
@@ -86,6 +92,59 @@ dvers=el8 el9
 extra_dvers=
 required_keys=OSG-23-developer
 
+#
+#
+# OSG 24
+#
+#
+
+[route 24-main]
+from=osg-24-main-%s-development
+to=osg-24-main-%s-testing
+repotag=osg24
+dvers=el8 el9
+extra_dvers=
+required_keys=OSG-24-developer
+
+[route 24-main-prerelease]
+from=osg-24-main-%s-testing
+to=osg-24-main-%s-prerelease
+repotag=osg24
+dvers=el8 el9
+extra_dvers=
+required_keys=OSG-24-developer
+
+[route 24-upcoming]
+from=osg-24-upcoming-%s-development
+to=osg-24-upcoming-%s-testing
+repotag=osg24up
+dvers=el8 el9
+extra_dvers=
+required_keys=OSG-24-developer
+
+[route 24-upcoming-prerelease]
+from=osg-24-upcoming-%s-testing
+to=osg-24-upcoming-%s-prerelease
+repotag=osg24up
+dvers=el8 el9
+extra_dvers=
+required_keys=OSG-24-developer
+
+[route 24-internal]
+from=osg-24-internal-%s-development
+to=osg-24-internal-%s-release
+repotag=osg24int
+dvers=el8 el9
+extra_dvers=
+required_keys=OSG-24-developer
+
+#
+#
+# Other
+#
+#
+
+
 [route devops-production]
 from=devops-%s-itb
 to=devops-%s-production
@@ -117,3 +176,5 @@ required_keys=CHTC
 3.6-up-rfr=3.6-upcoming-prerelease
 23-testing=23-main
 23-prerelease=23-main-prerelease
+24-testing=24-main
+24-prerelease=24-main-prerelease
