--- a/data/signing_keys.ini
+++ b/data/signing_keys.ini
@@ -26,6 +26,16 @@ keyid=92897c00
 dvers=el8 el9
 digest_algo = sha256
 
+[key OSG-24-auto]
+keyid=34e958b3
+dvers=el8 el9
+digest_algo = sha256
+
+[key OSG-24-developer]
+keyid=effc3be6
+dvers=el8 el9
+digest_algo = sha256
+
 [key CHTC]
 keyid=30ad7213
 dvers=el8 el9
